--- a/templates/contao/index.md.twig
+++ b/templates/contao/index.md.twig
@@ -13,9 +13,7 @@
 <a href="https://packagist.org/packages/">
     <img src="https://img.shields.io/packagist/" alt="Latest Stable Version">
 </a>
-<a href="https://packagist.org/packages/">
-    <img src="https://img.shields.io/packagist/" alt="Total Downloads">
-</a>
+[![PHP Composer](https://github.com/betobetok/ask-svg/actions/workflows/php.yml/badge.svg)](https://github.com/betobetok/ask-svg/actions/workflows/php.yml)
 
 A package to convert an svg graphic file into a Php object. based on [Blade UIkit](https://github.com/blade-ui-kit/blade-icons)
 
